Adjust font size and line height. Remove overflow: auto until Pygment's pre style line-height=125% is fixed (even if this means replacing Pygments with highlight.js).

--- a/static/css/gotohugo.css
+++ b/static/css/gotohugo.css
@@ -8,8 +8,8 @@
 
 tt, code, pre, kbd, samp {
     font-family: "Roboto Mono", monospace;
-	font-size: .9rem;
-	overflow: auto;
+	font-size: .95rem;
+	line-height: 1.45;
 }
 
 
